Factor dataset creation out of the actual class

--- a/examples/intro_tutorial.ipynb
+++ b/examples/intro_tutorial.ipynb
@@ -1510,7 +1510,7 @@
     "The `rnaglib.data_loading.RNADataset` object builds and provides access to collections of RNAs. \n",
     "This will be useful when training deep learning models.\n",
     "\n",
-    "When using the `Dataset` class, our standard data distribution should be downloaded automatically. Alternatively, you can choose to provide your own annotated RNAs by providing a `data_path`.\n"
+    "When using the `Dataset` class, our standard data distribution should be downloaded automatically. Alternatively, you can choose to provide your own annotated RNAs by providing a `data_path` or using `RNADataset.from_args()` class method.\n"
    ]
   },
   {
@@ -1531,10 +1531,10 @@
    "source": [
     "from rnaglib.data_loading import RNADataset\n",
     "\n",
-    "dataset = RNADataset(version='1.0.0')\n",
+    "dataset = RNADataset()\n",
     "\n",
     "rna_1 = dataset[3]\n",
-    "pdbid = dataset.available_pdbids[3]\n",
+    "pdbid = dataset.all_graphs[3]\n",
     "rna_2 = dataset.get_pdbid(pdbid)\n",
     "\n",
     "print(f\"{pdbid} {rna_2}\")"
@@ -1619,20 +1619,20 @@
     "import random\n",
     "\n",
     "pockets = []\n",
-    "for i,d in enumerate(dataset):\n",
-    "        G = d['rna']\n",
-    "        try:\n",
-    "            pocket = [n for n, data in G.nodes(data=True) if data['binding_small-molecule'] is not None]\n",
-    "            # sample same number of random nucleotides\n",
-    "            non_pocket = random.sample(list(G.nodes()), k=len(pocket))\n",
-    "        except KeyError as e:\n",
-    "            continue\n",
-    "        if pocket:\n",
-    "            pockets.append((pocket, non_pocket, G))\n",
-    "        else:\n",
-    "            # no pocket found\n",
-    "            pass\n",
-    "        \n",
+    "for i, d in enumerate(dataset):\n",
+    "    G = d['rna']\n",
+    "    try:\n",
+    "        pocket = [n for n, data in G.nodes(data=True) if data['binding_small-molecule'] is not None]\n",
+    "        # sample same number of random nucleotides\n",
+    "        non_pocket = random.sample(list(G.nodes()), k=len(pocket))\n",
+    "    except KeyError as e:\n",
+    "        continue\n",
+    "    if pocket:\n",
+    "        pockets.append((pocket, non_pocket, G))\n",
+    "    else:\n",
+    "        # no pocket found\n",
+    "        pass\n",
+    "\n",
     "print(f\"binding nodes {pockets[0][0]}, \\n random sample {pockets[0][1]}, \\n graph {pockets[0][2]}\")"
    ]
   },
@@ -1659,7 +1659,7 @@
     "    for nt in pocket:\n",
     "        # add edge type of all base pairs in pocket\n",
     "        bps.extend([{'bp_type': data['LW'],\n",
-    "                     'is_pocket': True} for _,data in G[nt].items()])\n",
+    "                     'is_pocket': True} for _, data in G[nt].items()])\n",
     "        # sse key is format '<sse type>_<id>'\n",
     "        node_data = G.nodes[nt]\n",
     "        if node_data['sse']['sse'] is None:\n",
@@ -1671,14 +1671,13 @@
     "    for nt in non_pocket:\n",
     "        # add edge type of all base pairs in pocket\n",
     "        bps.extend([{'bp_type': data['LW'],\n",
-    "                     'is_pocket': False} for _,data in G[nt].items()])\n",
+    "                     'is_pocket': False} for _, data in G[nt].items()])\n",
     "        # sse key is format '<sse type>_<id>'\n",
     "        node_data = G.nodes[nt]\n",
     "        if node_data['sse']['sse'] is None:\n",
     "            continue\n",
     "        sses.append({'sse_type': node_data['sse']['sse'].split(\"_\")[0],\n",
-    "                     'is_pocket':False})\n",
-    "\n",
+    "                     'is_pocket': False})\n",
     "\n",
     "# for convenience convert to dataframe\n",
     "bp_df = pd.DataFrame(bps)\n",
@@ -1713,6 +1712,7 @@
    "source": [
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "# remove backbones\n",
     "bp_df = bp_df.loc[~bp_df['bp_type'].isin(['B35', 'B53'])]\n",
     "\n",
@@ -1836,12 +1836,12 @@
     }
    ],
    "source": [
+    "from rnaglib.data_loading import FeaturesComputer\n",
     "from rnaglib.representations import GraphRepresentation\n",
     "\n",
+    "feature_computer = FeaturesComputer(nt_features='nt_code', nt_targets='binding_ion')\n",
     "graph_rep = GraphRepresentation(framework='dgl')\n",
-    "nt_features = ['nt_code']\n",
-    "nt_targets = ['binding_ion']\n",
-    "dataset = RNADataset(version='1.0.0', nt_features=nt_features, nt_targets=nt_targets, representations=[graph_rep])\n",
+    "dataset = RNADataset(version='1.0.0', features_computer=feature_computer, representations=graph_rep)\n",
     "dataset[0]['graph']"
    ]
   },
@@ -2611,18 +2611,24 @@
     }
    ],
    "source": [
-    "from rnaglib.learning import models, learn\n",
-    "from rnaglib.data_loading import graphloader\n",
+    "import torch\n",
     "\n",
-    "# Choose the data, features and targets to use and GET THE DATA GOING\n",
-    "node_features = ['nt_code']\n",
-    "node_target = ['binding_protein']\n",
-    "supervised_dataset = loader.SupervisedDataset(node_features=node_features,\n",
-    "                                              node_target=node_target)\n",
-    "train_loader, validation_loader, test_loader = loader.Loader(dataset=supervised_dataset).get_data()\n",
+    "from rnaglib.learning import models, learn\n",
+    "from rnaglib.data_loading import rna_dataset, rna_loader, FeaturesComputer\n",
+    "from rnaglib.representations import GraphRepresentation\n",
+    "\n",
+    "features_computer = FeaturesComputer(nt_features='nt_code', nt_targets='binding_protein')\n",
+    "graph_rep = GraphRepresentation(framework='dgl')\n",
+    "all_graphs = ['1a9n.json', '1b23.json', '1b7f.json', '1csl.json', '1d4r.json', '1dfu.json', '1duq.json',\n",
+    "              '1e8o.json', '1ec6.json', '1et4.json']\n",
+    "supervised_dataset = rna_dataset.RNADataset(all_graphs=all_graphs,\n",
+    "                                            features_computer=features_computer,\n",
+    "                                            representations=[graph_rep])\n",
+    "\n",
+    "train_loader, validation_loader, test_loader = rna_loader.get_loader(dataset=supervised_dataset).get_data()\n",
     "\n",
     "# Define a model, we first embed our data in 10 dimensions, and then add one classification\n",
-    "input_dim, target_dim = supervised_dataset.input_dim, supervised_dataset.output_dim\n",
+    "input_dim, target_dim = feature_computer.input_dim, feature_computer.output_dim\n",
     "embedder_model = models.Embedder(dims=[10, 10], infeatures_dim=input_dim)\n",
     "classifier_model = models.Classifier(embedder=embedder_model, classif_dims=[target_dim])\n",
     "\n",
