PEP8 + some graph->rna renaming

--- a/examples/intro_tutorial.ipynb
+++ b/examples/intro_tutorial.ipynb
@@ -1534,7 +1534,7 @@
     "dataset = RNADataset()\n",
     "\n",
     "rna_1 = dataset[3]\n",
-    "pdbid = dataset.all_graphs[3]\n",
+    "pdbid = dataset.all_rnas[3]\n",
     "rna_2 = dataset.get_pdbid(pdbid)\n",
     "\n",
     "print(f\"{pdbid} {rna_2}\")"
@@ -2619,9 +2619,9 @@
     "\n",
     "features_computer = FeaturesComputer(nt_features='nt_code', nt_targets='binding_protein')\n",
     "graph_rep = GraphRepresentation(framework='dgl')\n",
-    "all_graphs = ['1a9n.json', '1b23.json', '1b7f.json', '1csl.json', '1d4r.json', '1dfu.json', '1duq.json',\n",
+    "all_rnas = ['1a9n.json', '1b23.json', '1b7f.json', '1csl.json', '1d4r.json', '1dfu.json', '1duq.json',\n",
     "              '1e8o.json', '1ec6.json', '1et4.json']\n",
-    "supervised_dataset = rna_dataset.RNADataset(all_graphs=all_graphs,\n",
+    "supervised_dataset = rna_dataset.RNADataset(all_rnas=all_rnas,\n",
     "                                            features_computer=features_computer,\n",
     "                                            representations=[graph_rep])\n",
     "\n",
