clean duplicated splitter

--- a/examples/intro_tutorial.ipynb
+++ b/examples/intro_tutorial.ipynb
@@ -2554,7 +2554,8 @@
    ],
    "source": [
     "from torch.utils.data import DataLoader\n",
-    "from rnaglib.data_loading import split_dataset, Collater\n",
+    "from rnaglib.data_loading import Collater\n",
+    "from rnaglib.splitters import split_dataset\n",
     "\n",
     "train_set, valid_set, test_set = split_dataset(dataset, split_train=0.7, split_valid=0.85)\n",
     "collater = Collater(dataset=dataset)\n",
