Refactor from_args into from_database, put database_related stuff in a separate file, add default functions for splits/dataset creations

--- a/examples/intro_tutorial.ipynb
+++ b/examples/intro_tutorial.ipynb
@@ -1510,7 +1510,7 @@
     "The `rnaglib.data_loading.RNADataset` object builds and provides access to collections of RNAs. \n",
     "This will be useful when training deep learning models.\n",
     "\n",
-    "When using the `Dataset` class, our standard data distribution should be downloaded automatically. Alternatively, you can choose to provide your own annotated RNAs by providing a `data_path` or using `RNADataset.from_args()` class method.\n"
+    "When using the `Dataset` class, our standard data distribution should be downloaded automatically. Alternatively, you can choose to provide your own annotated RNAs by providing a `data_path` or using `RNADataset.from_database()` class method.\n"
    ]
   },
   {
