--- a/src/rnaglib/tasks/models/IF_model.ipynb
+++ b/src/rnaglib/tasks/models/IF_model.ipynb
@@ -169,7 +169,7 @@
      "output_type": "stream",
      "text": [
       "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mluiswyss\u001b[0m (\u001b[33mmlsb\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+      "\u001B[34m\u001B[1mwandb\u001B[0m: Currently logged in as: \u001B[33mluiswyss\u001B[0m (\u001B[33mmlsb\u001B[0m). Use \u001B[1m`wandb login --relogin`\u001B[0m to force relogin\n"
      ]
     },
     {
