Added the Task tutorial and added a few bugfixes, such as empty metadata catching and sloppy Zenodo conditions

--- a/docs/source/code_architecture/reproduce_snippets.ipynb
+++ b/docs/source/code_architecture/reproduce_snippets.ipynb
@@ -1661,7 +1661,7 @@
     "rna_names = ['1a9n', '1av6', '1b23']\n",
     "dataset = RNADataset(rna_id_subset=rna_names)\n",
     "\n",
-    "from rnaglib.dataset_transforms import CDHitComputer\n",
+    "from rnaglib.dataset_transforms import CDHitComputer, RandomSplitter\n",
     "from rnaglib.dataset_transforms import StructureDistanceComputer\n",
     "\n",
     "dataset = CDHitComputer()(dataset)\n",
@@ -1836,6 +1836,252 @@
     }
    ],
    "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T10:38:59.296220Z",
+     "start_time": "2025-03-21T10:38:57.080482Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from rnaglib.tasks import ResidueClassificationTask\n",
+    "from rnaglib.dataset import RNADataset\n",
+    "from rnaglib.transforms import FeaturesComputer\n",
+    "from rnaglib.dataset_transforms import RandomSplitter\n",
+    "\n",
+    "\n",
+    "class DummyTask(ResidueClassificationTask):\n",
+    "    input_var = \"nt_code\"\n",
+    "    target_var = \"is_modified\"\n",
+    "    name = \"rna_dummy\"\n",
+    "\n",
+    "    def __init__(self, **kwargs):\n",
+    "        super().__init__(additional_metadata={\"multi_label\": False}, **kwargs)\n",
+    "\n",
+    "    def process(self) -> RNADataset:\n",
+    "        return RNADataset(in_memory=self.in_memory, debug=True)\n",
+    "\n",
+    "    def post_process(self):\n",
+    "        pass\n",
+    "\n",
+    "    def get_task_vars(self) -> FeaturesComputer:\n",
+    "        return FeaturesComputer(nt_features=self.input_var, nt_targets=self.target_var)\n",
+    "\n",
+    "    @property\n",
+    "    def default_splitter(self):\n",
+    "        return RandomSplitter()"
+   ],
+   "id": "26988b5eea67a0a1",
+   "outputs": [],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T10:39:08.753756Z",
+     "start_time": "2025-03-21T10:39:08.391390Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "task = DummyTask(root=\"test_task\")",
+   "id": "15a26a4a0347b4ae",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Creating task dataset from scratch...\n",
+      "Database was found and not overwritten\n",
+      ">>> Computing description of task...\n",
+      "{'nt_features': {'1d0t.A.2': tensor([0., 0., 0., 1.]), '1d0t.A.1': tensor([0., 0., 0., 1.]), '1d0t.A.3': tensor([0., 0., 0., 1.]), '1d0t.A.4': tensor([1., 0., 0., 0.]), '1d0t.A.5': tensor([0., 1., 0., 0.]), '1d0t.A.6': tensor([0., 0., 1., 0.]), '1d0t.A.7': tensor([1., 0., 0., 0.]), '1d0t.A.8': tensor([0., 0., 1., 0.]), '1d0t.A.9': tensor([0., 0., 1., 0.]), '1d0t.A.10': tensor([1., 0., 0., 0.]), '1d0t.A.11': tensor([0., 1., 0., 0.]), '1d0t.A.12': tensor([0., 1., 0., 0.]), '1d0t.A.13': tensor([1., 0., 0., 0.]), '1d0t.A.14': tensor([0., 0., 0., 1.]), '1d0t.A.15': tensor([0., 0., 0., 1.]), '1d0t.A.16': tensor([0., 0., 0., 1.]), '1d0t.A.17': tensor([1., 0., 0., 0.]), '1d0t.A.18': tensor([0., 1., 0., 0.]), '1d0t.A.19': tensor([0., 0., 1., 0.]), '1d0t.A.20': tensor([0., 1., 0., 0.]), '1d0t.A.21': tensor([0., 0., 1., 0.])}, 'nt_targets': {'1d0t.A.2': tensor([0.]), '1d0t.A.1': tensor([0.]), '1d0t.A.3': tensor([0.]), '1d0t.A.4': tensor([1.]), '1d0t.A.5': tensor([0.]), '1d0t.A.6': tensor([0.]), '1d0t.A.7': tensor([1.]), '1d0t.A.8': tensor([0.]), '1d0t.A.9': tensor([0.]), '1d0t.A.10': tensor([1.]), '1d0t.A.11': tensor([0.]), '1d0t.A.12': tensor([0.]), '1d0t.A.13': tensor([1.]), '1d0t.A.14': tensor([0.]), '1d0t.A.15': tensor([0.]), '1d0t.A.16': tensor([0.]), '1d0t.A.17': tensor([1.]), '1d0t.A.18': tensor([0.]), '1d0t.A.19': tensor([0.]), '1d0t.A.20': tensor([0.]), '1d0t.A.21': tensor([0.])}}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [00:00<00:00, 402.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Description:\n",
+      "num_node_features  :  4\n",
+      "num_classes  :  2\n",
+      "dataset_size  :  50\n",
+      "Class distribution:\n",
+      "\tClass 0: 2482 nodes\n",
+      "\tClass 1: 41 nodes\n",
+      "no split found, splitting\n",
+      ">>> Saving dataset.\n",
+      "dumping 50 rnas\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Done\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T10:57:05.283841Z",
+     "start_time": "2025-03-21T10:57:04.163708Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from rnaglib.tasks import get_task\n",
+    "\n",
+    "task_site = get_task(root=\"test_site\", task_id=\"rna_site\")"
+   ],
+   "id": "c13b02536521b50e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Downloading task dataset from Zenodo...\n",
+      "Downloading rna_site.tar.gz from https://sandbox.zenodo.org/records/184453/files/rna_site.tar.gz...\n",
+      "[==================================================] 100.00 %>>> Loading precomputed task...\n",
+      ">>> Done\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T10:57:15.738979Z",
+     "start_time": "2025-03-21T10:57:14.568180Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from rnaglib.tasks import BindingSite\n",
+    "\n",
+    "task_site = BindingSite(root='toto')"
+   ],
+   "id": "6a83be5ebb851820",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Downloading task dataset from Zenodo...\n",
+      "Downloading rna_site.tar.gz from https://sandbox.zenodo.org/records/184453/files/rna_site.tar.gz...\n",
+      "[==================================================] 100.00 %>>> Loading precomputed task...\n",
+      ">>> Done\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T12:55:31.301025Z",
+     "start_time": "2025-03-21T12:55:31.293027Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from rnaglib.transforms import GraphRepresentation\n",
+    "\n",
+    "task_site.add_representation(GraphRepresentation(framework='pyg'))\n",
+    "train_loader, _, test_loader = task_site.get_split_loaders(batch_size=2)\n",
+    "for batch in train_loader:\n",
+    "    print(batch['graph'])\n",
+    "    break"
+   ],
+   "id": "54d41c846376cfdb",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Adding graph to dataset representations.\n",
+      "Removing old representations of {'graph'} from existing representation to avoid clash\n",
+      "DataBatch(x=[20, 4], edge_index=[2, 54], edge_attr=[54], y=[20], batch=[20], ptr=[2])\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T12:53:23.690721Z",
+     "start_time": "2025-03-21T12:53:22.108901Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import torch\n",
+    "task_site.set_loaders(batch_size=1, recompute=False)\n",
+    "all_preds, all_probs, all_labels = [], [], []\n",
+    "for batch in task_site.train_dataloader:\n",
+    "    graph = batch['graph']\n",
+    "    label = graph.y\n",
+    "    probs = torch.rand(label.shape)  # insert predictions here\n",
+    "    all_labels.append(label)\n",
+    "    all_probs.append(probs)\n",
+    "    all_preds.append(torch.round(probs))\n",
+    "\n",
+    "task_site.compute_metrics(all_preds, all_probs, all_labels)"
+   ],
+   "id": "b148f2fa3c7a4371",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subsetting started...\n",
+      "Subsetting completed successfully.\n",
+      "Subsetting started...\n",
+      "Subsetting completed successfully.\n",
+      "Subsetting started...\n",
+      "Subsetting completed successfully.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.49430333286304007,\n",
+       " 'auc': 0.4765192419946985,\n",
+       " 'balanced_accuracy': 0.47948057217941026,\n",
+       " 'f1': 0.15330239696592862,\n",
+       " 'mcc': -0.018428943829544447,\n",
+       " 'global_accuracy': 0.4952484656503663,\n",
+       " 'global_f1': 0.12882282590124722,\n",
+       " 'global_mcc': -0.013964973630459553,\n",
+       " 'global_balanced_accuracy': 0.4869967701944408,\n",
+       " 'global_auc': 0.48469138772891385}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
   }
  ],
  "metadata": {
