--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -36,37 +36,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T18:37:37.030564Z",
+     "start_time": "2025-03-21T18:37:37.027383Z"
+    }
+   },
+   "source": [
+    "from rnaglib.dataset import RNADataset\n",
+    "\n",
+    "dataset = RNADataset(debug=True)\n",
+    "dataset.rnas"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index file not found at /Users/wissam/.rnaglib/indexes/rnaglib-nr-1.0.0.json. Run rnaglib_index\n",
       "Database was found and not overwritten\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/RNApython/lib/python3.11/site-packages/networkx/readwrite/json_graph/node_link.py:287: FutureWarning: \n",
-      "The default value will be changed to `edges=\"edges\" in NetworkX 3.6.\n",
-      "\n",
-      "To make this warning go away, explicitly set the edges kwarg, e.g.:\n",
-      "\n",
-      "  nx.node_link_graph(data, edges=\"links\") to preserve current behavior, or\n",
-      "  nx.node_link_graph(data, edges=\"edges\") for forward compatibility.\n",
-      "  warnings.warn(\n"
      ]
     }
    ],
-   "source": [
-    "from rnaglib.data_loading import RNADataset\n",
-    "\n",
-    "dataset = RNADataset()"
-   ]
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -83,25 +74,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T18:37:37.086797Z",
+     "start_time": "2025-03-21T18:37:37.080317Z"
+    }
+   },
+   "source": "dataset[0]",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'rna': <networkx.classes.digraph.DiGraph at 0x16a651350>,\n",
-       " 'graph_path': PosixPath('/Users/wissam/.rnaglib/datasets/rnaglib-nr-1.0.0/graphs/1a9n.json'),\n",
-       " 'cif_path': PosixPath('/Users/wissam/.rnaglib/datasets/rnaglib-nr-1.0.0/structures/1a9n.cif')}"
+       "{'rna': <networkx.classes.digraph.DiGraph at 0x72fab590c4d0>,\n",
+       " 'graph_path': PosixPath('/home/vincent/.rnaglib/datasets/rnaglib-debug-2.0.2/graphs/1d0t.json'),\n",
+       " 'cif_path': PosixPath('/home/vincent/.rnaglib/structures/1d0t.cif')}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "dataset[0]"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -196,66 +190,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T18:37:37.688087Z",
+     "start_time": "2025-03-21T18:37:37.149692Z"
+    }
+   },
+   "source": [
+    "from rnaglib.tasks import BindingSite\n",
+    "from rnaglib.transforms import FeaturesComputer\n",
+    "\n",
+    "task = BindingSite(root=\"tutorial\")"
+   ],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating task dataset from scratch...\n",
-      "Database was found and not overwritten\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/RNApython/lib/python3.11/site-packages/networkx/readwrite/json_graph/node_link.py:287: FutureWarning: \n",
-      "The default value will be changed to `edges=\"edges\" in NetworkX 3.6.\n",
-      "\n",
-      "To make this warning go away, explicitly set the edges kwarg, e.g.:\n",
-      "\n",
-      "  nx.node_link_graph(data, edges=\"links\") to preserve current behavior, or\n",
-      "  nx.node_link_graph(data, edges=\"edges\") for forward compatibility.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">>> Saving dataset.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/RNApython/lib/python3.11/site-packages/networkx/readwrite/json_graph/node_link.py:142: FutureWarning: \n",
-      "The default value will be `edges=\"edges\" in NetworkX 3.6.\n",
-      "\n",
-      "To make this warning go away, explicitly set the edges kwarg, e.g.:\n",
-      "\n",
-      "  nx.node_link_data(G, edges=\"links\") to preserve current behavior, or\n",
-      "  nx.node_link_data(G, edges=\"edges\") for forward compatibility.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      ">>> Loading precomputed task...\n",
       ">>> Done\n"
      ]
     }
    ],
-   "source": [
-    "from rnaglib.tasks import BindingSiteDetection\n",
-    "from rnaglib.transforms import FeaturesComputer\n",
-    "\n",
-    "task = BindingSiteDetection(root=\"tutorial\", recompute = True) # set recompute=True to use the dataset designed for the Task, otherwise the dataset located at tutorial/dataset will be used"
-   ]
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -282,16 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T18:37:46.546896Z",
+     "start_time": "2025-03-21T18:37:46.106805Z"
+    }
+   },
    "source": [
-    "from rnaglib.data_loading import RNADataset\n",
-    "from rnaglib.transforms import PDBIDNameTransform\n",
+    "from rnaglib.dataset import RNADataset\n",
+    "from rnaglib.transforms import BindingSiteAnnotator\n",
     "\n",
-    "rnas = PDBIDNameTransform()(task.dataset)\n",
+    "rnas = BindingSiteAnnotator()(task.dataset)\n",
     "task.dataset = RNADataset(rnas=[r[\"rna\"] for r in rnas])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -316,25 +278,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T18:39:11.148503Z",
+     "start_time": "2025-03-21T18:39:11.144877Z"
+    }
+   },
    "source": [
     "from rnaglib.transforms import AnnotationTransform\n",
     "from networkx import set_node_attributes\n",
     "\n",
+    "\n",
     "class CustomAnnotator(AnnotationTransform):\n",
-    "    def forward (self, rna_dict: dict) -> dict:        \n",
+    "    def forward(self, rna_dict: dict) -> dict:\n",
     "        custom_annotation = {\n",
     "            node: self._custom_annotation(nodedata)\n",
     "            for node, nodedata in rna_dict['rna'].nodes(data=True)\n",
     "        }\n",
     "        set_node_attributes(rna_dict['rna'], custom_annotation, \"custom_annotation\")\n",
     "        return rna_dict\n",
+    "\n",
     "    @staticmethod\n",
-    "    def _has_binding_site(nodedata: dict) -> bool:\n",
-    "        return ... # RNA dictionary-wise formula to compute the custom annotation"
-   ]
+    "    def _custom_annotation(nodedata: dict) -> bool:\n",
+    "        return None  # RNA dictionary-wise formula to compute the custom annotation"
+   ],
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -345,13 +314,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-21T18:39:15.111435Z",
+     "start_time": "2025-03-21T18:39:15.101610Z"
+    }
+   },
    "source": [
     "rnas = CustomAnnotator()(task.dataset)\n",
     "task.dataset = RNADataset(rnas=[r[\"rna\"] for r in rnas])"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -375,6 +349,7 @@
    "source": [
     "from rnaglib.transforms import FilterTransform\n",
     "\n",
+    "\n",
     "class CustomFilter(FilterTransform):\n",
     "\n",
     "    def __init__(self, ..., **kwargs):\n",
@@ -382,10 +357,9 @@
     "        super().__init__(**kwargs)\n",
     "\n",
     "    def forward(self, rna_dict: dict) -> bool:\n",
-    "\n",
     "        ...\n",
     "\n",
-    "        return ... # should return a Boolean (True if the RNA described by rna_dict passes the filter, False otherwise)"
+    "        return ...  # should return a Boolean (True if the RNA described by rna_dict passes the filter, False otherwise)"
    ]
   },
   {
@@ -440,7 +414,7 @@
    "source": [
     "from rnaglib.encoders import FloatEncoder\n",
     "\n",
-    "task.dataset.features_computer.add_feature(feature_names=\"phase_angle\", custom_encoders={\"phase_angle\":FloatEncoder()})"
+    "task.dataset.features_computer.add_feature(feature_names=\"phase_angle\", custom_encoders={\"phase_angle\": FloatEncoder()})"
    ]
   },
   {
@@ -477,16 +451,18 @@
    "source": [
     "from rnaglib.transforms import Transform\n",
     "\n",
+    "\n",
     "class AddCustomFeature(Transform):\n",
     "    name = \"add_custom_feature\"\n",
     "    encoder = ...\n",
+    "\n",
     "    def __init__(\n",
     "            self, **kwargs\n",
     "    ):\n",
     "        super().__init__(**kwargs)\n",
-    "    def forward(self, rna_dict: Dict) -> Dict:\n",
     "\n",
-    "        ... # compute and add additional features\n",
+    "    def forward(self, rna_dict: Dict) -> Dict:\n",
+    "        ...  # compute and add additional features\n",
     "\n",
     "        return rna_dict"
    ]
@@ -570,6 +546,7 @@
    "source": [
     "from rnaglib.transforms import Representation\n",
     "\n",
+    "\n",
     "class CustomRepresentation(Representation):\n",
     "    \"\"\"\n",
     "    Converts RNA into a custom representation.\n",
@@ -581,18 +558,16 @@
     "        pass\n",
     "\n",
     "    def __call__(self, rna_graph, features_dict):\n",
-    "\n",
-    "        ... # computes the representation\n",
+    "        ...  # computes the representation\n",
     "\n",
     "        return representation\n",
     "\n",
     "    @property\n",
     "    def name(self):\n",
-    "        return \"custom_representation\" # the name of the representation\n",
+    "        return \"custom_representation\"  # the name of the representation\n",
     "\n",
     "    def batch(self, samples):\n",
-    "\n",
-    "        ... # defines the way to batch representations of different samples together\n",
+    "        ...  # defines the way to batch representations of different samples together\n",
     "\n",
     "        return batched_samples"
    ]
@@ -659,16 +634,16 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "\n",
+    "\n",
     "class LinearModel(torch.nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(LinearModel,self).__init__()\n",
+    "        super(LinearModel, self).__init__()\n",
     "        self.linear = torch.nn.Linear(5, 1)\n",
     "\n",
-    "    def forward(self, data):  \n",
+    "    def forward(self, data):\n",
     "        x, edge_index, edge_type = data.x, data.edge_index, data.edge_attr\n",
     "        x = self.linear(x)\n",
-    "        return F.sigmoid(x)\n",
-    "    "
+    "        return F.sigmoid(x)\n"
    ]
   },
   {
@@ -718,7 +693,8 @@
    "source": [
     "from sklearn.metrics import accuracy_score, f1_score, roc_auc_score, matthews_corrcoef\n",
     "\n",
-    "my_representation = \"graph\" # or \"point_cloud\" or \"custom_representation\"\n",
+    "my_representation = \"graph\"  # or \"point_cloud\" or \"custom_representation\"\n",
+    "\n",
     "\n",
     "def evaluate(loader):\n",
     "    model.eval()\n",
@@ -782,10 +758,10 @@
     "\n",
     "for epoch in range(epochs):\n",
     "    train()\n",
-    "    train_metrics = task.evaluate(model, task.train_dataloader) # you might be using evaluate instead of task.evaluate\n",
-    "    val_metrics = task.evaluate(model, task.val_dataloader) # you might be using evaluate instead of task.evaluate\n",
+    "    train_metrics = task.evaluate(model, task.train_dataloader)  # you might be using evaluate instead of task.evaluate\n",
+    "    val_metrics = task.evaluate(model, task.val_dataloader)  # you might be using evaluate instead of task.evaluate\n",
     "    print(\n",
-    "    f\"\"\"Epoch {epoch + 1}, TrainAcc {train_metrics[\"accuracy\"]:.4f} Val Acc: {val_metrics[\"accuracy\"]:.4f}\"\"\"\n",
+    "        f\"\"\"Epoch {epoch + 1}, TrainAcc {train_metrics[\"accuracy\"]:.4f} Val Acc: {val_metrics[\"accuracy\"]:.4f}\"\"\"\n",
     "    )"
    ]
   },
@@ -812,7 +788,7 @@
    "source": [
     "test_metrics = task.evaluate(\n",
     "    model, task.test_dataloader, device\n",
-    ") # you might be using evaluate instead of task.evaluate\n",
+    ")  # you might be using evaluate instead of task.evaluate\n",
     "\n",
     "print(\n",
     "    f\"\"\"Test Accuracy: {test_metrics[\"accuracy\"]:.4f}, Test F1 Score: {test_metrics[\"f1\"]:.4f}, Test AUC: {test_metrics[\"auc\"]:.4f}, Test MCC: {test_metrics[\"mcc\"]:.4f}\"\"\"\n",
@@ -869,6 +845,7 @@
     "from rnaglib.utils import DummyResidueModel\n",
     "from sklearn.metrics import root_mean_squared_error, mean_absolute_error\n",
     "\n",
+    "\n",
     "class ResidueRegression(Task):\n",
     "    def __init__(self, root, splitter=None, **kwargs):\n",
     "        super().__init__(root=root, splitter=splitter, **kwargs)\n",
@@ -898,7 +875,6 @@
     "        RMSE = root_mean_squared_error(all_labels, all_preds)\n",
     "        MAE = mean_absolute_error(all_labels, preds)\n",
     "\n",
-    "\n",
     "        return {\"RMSE\": RMSE, \"MAE\": MAE}"
    ]
   },
@@ -918,6 +894,7 @@
     "from rnaglib.transforms import PDBIDNameTransform\n",
     "from rnaglib.encoders import BoolEncoder\n",
     "\n",
+    "\n",
     "class AnglePrediction(ResidueRegression):\n",
     "    # Target variable\n",
     "    target_var = \"phase_angle\"\n",
@@ -926,16 +903,16 @@
     "\n",
     "    def __init__(self, root, splitter=None, **kwargs):\n",
     "        super().__init__(root=root, splitter=splitter, **kwargs)\n",
-    "        \n",
+    "\n",
     "    # Creation and preprocessing of the dataset\n",
     "    def process(self) -> RNADataset:\n",
     "        rnas = RNADataset(debug=False, redundancy='all', rna_id_subset=SPLITTING_VARS['PDB_TO_CHAIN_TR60_TE18'].keys())\n",
     "        dataset = RNADataset(rnas=[r[\"rna\"] for r in rnas])\n",
     "        # TODO: remove wrong chains using  SPLITTING_VARS[\"PDB_TO_CHAIN_TR60_TE18\"]\n",
     "        rnas = PDBIDNameTransform()(rnas)\n",
-    "        dataset = RNADataset(rnas=[r[\"rna\"] for r in rnas]) \n",
+    "        dataset = RNADataset(rnas=[r[\"rna\"] for r in rnas])\n",
     "        return dataset\n",
-    "    \n",
+    "\n",
     "    # Computation of the FeaturesComputer\n",
     "    def get_task_vars(self) -> FeaturesComputer:\n",
     "        return FeaturesComputer(\n",
